refactor(matching): 대기열을 조건별 버킷으로 나눈다
가장 오래 기다린 버킷을 anchor로 삼아 같은 파티가 될 수 있는 버킷만 등급 순으로 읽는다.
anchor 하나만 보면 그 사람이 못 맞을 때 모드 전체가 멈추므로 예산만큼 여럿 담는다.
참가자마다 빠져나올 key가 달라 claim 스크립트도 버킷 key를 참가자별로 받는다.