@@ -1,5 +1,8 @@
 package com.queuemate.matching.infra;
 
+import com.queuemate.matching.domain.BucketDepth;
+import com.queuemate.matching.domain.BucketScanPlan;
+import com.queuemate.matching.domain.MatchBucket;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.data.redis.core.StringRedisTemplate;
@@ -11,12 +14,11 @@ import org.springframework.data.redis.core.ScanOptions;
 
 import java.time.Instant;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
 import java.util.UUID;
 
 /**
@@ -32,11 +34,17 @@ public class MatchQueueRepository {
     private final StringRedisTemplate redis;
     private final RedisScript<Long> acquireScript;
     private final RedisScript<Long> releaseScript;
+    private final RedisScript<List> depthsScript;
+    private final RedisScript<List> sliceScript;
+    private final RedisScript<Long> countScript;
 
     public MatchQueueRepository(StringRedisTemplate redis) {
         this.redis = redis;
         this.acquireScript = LuaScripts.load("redis/acquire-active-request.lua", Long.class);
         this.releaseScript = LuaScripts.load("redis/release-active-request.lua", Long.class);
+        this.depthsScript = LuaScripts.load("redis/queue-bucket-depths.lua", List.class);
+        this.sliceScript = LuaScripts.load("redis/queue-bucket-slice.lua", List.class);
+        this.countScript = LuaScripts.load("redis/queue-bucket-count.lua", Long.class);
     }
 
     /**
@@ -46,10 +54,10 @@ public class MatchQueueRepository {
      *                 그대로 넘겨야 aging을 잃지 않는다 (docs/03 §8)
      * @return 등록되면 true, 이미 활성 요청이 있으면 false (호출자는 409로 응답한다)
      */
-    public boolean acquire(UUID userId, UUID requestId, String queueKey, Instant queuedAt) {
+    public boolean acquire(UUID userId, UUID requestId, String bucketKey, Instant queuedAt) {
         return Long.valueOf(1L).equals(redis.execute(
                 acquireScript,
-                List.of(MatchingRedisKeys.activeRequest(userId), queueKey),
+                List.of(MatchingRedisKeys.activeRequest(userId), bucketKey),
                 requestId.toString(), String.valueOf(queuedAt.toEpochMilli())));
     }
 
@@ -59,10 +67,10 @@ public class MatchQueueRepository {
      *
      * @return 해제되면 true, 이미 없거나 다른 요청이 자리를 차지했으면 false
      */
-    public boolean release(UUID userId, UUID requestId, String queueKey) {
+    public boolean release(UUID userId, UUID requestId, String bucketKey) {
         return Long.valueOf(1L).equals(redis.execute(
                 releaseScript,
-                List.of(MatchingRedisKeys.activeRequest(userId), queueKey),
+                List.of(MatchingRedisKeys.activeRequest(userId), bucketKey),
                 requestId.toString()));
     }
 
@@ -70,8 +78,8 @@ public class MatchQueueRepository {
      * 제안이 깨진 요청을 대기열로 되돌린다. guard는 계속 살아 있으므로 다시 잡지 않는다.
      * 최초 대기 시각을 그대로 넣어 오래 기다린 사람이 앞자리를 유지하게 한다 (docs/03 §8).
      */
-    public void requeue(String queueKey, UUID requestId, Instant queuedAt) {
-        redis.opsForZSet().add(queueKey, requestId.toString(), queuedAt.toEpochMilli());
+    public void requeue(String bucketKey, UUID requestId, Instant queuedAt) {
+        redis.opsForZSet().add(bucketKey, requestId.toString(), queuedAt.toEpochMilli());
     }
 
     /**
@@ -79,10 +87,18 @@ public class MatchQueueRepository {
      *
      * <p>지우지 않으면 scan 창(앞에서부터 N개) 앞자리를 이런 항목이 차지해,
      * 실제 대기자가 영원히 스캔되지 않는다.
+     *
+     * <p>한 번의 스캔에서 나온 것들을 한 번에 지운다. 항목마다 왕복하면 큐가 상해 있을수록
+     * 느려져, 가장 급한 상황에서 가장 오래 걸린다.
      */
-    public void removeStale(String queueKey, UUID requestId) {
-        log.debug("대기열에서 끝난 요청을 제거한다 queueKey={} requestId={}", queueKey, requestId);
-        redis.opsForZSet().remove(queueKey, requestId.toString());
+    public void removeStale(MatchBucket bucket, Collection<UUID> requestIds) {
+        if (requestIds.isEmpty()) {
+            return;
+        }
+        log.debug("대기열에서 끝난 요청을 제거한다 bucket={} count={}",
+                bucket.suffix(), requestIds.size());
+        redis.opsForZSet().remove(MatchingRedisKeys.queue(bucket),
+                requestIds.stream().map(UUID::toString).toArray(Object[]::new));
     }
 
     /** 현재 활성 요청. 없으면 empty. */
@@ -92,29 +108,72 @@ public class MatchQueueRepository {
     }
 
     /**
-     * 오래 기다린 순으로 후보 requestId를 꺼낸다. starvation을 막기 위한 aging 순서다 (docs/03 §6).
-     * 여기서 나온 결과는 이미 낡았을 수 있으므로, 실제 잠금은 atomic claim이 다시 검증한다.
+     * 비어 있지 않은 bucket과 그 깊이를 읽는다 (docs/07 §3.2).
+     *
+     * <p>후보를 읽기 전에 어느 bucket을 볼지 정하기 위한 자료다. bucket 수는 모드당 유한하고
+     * 작으므로 한 번에 훑는다.
      */
-    public List<UUID> waitingOldestFirst(String queueKey, int limit) {
-        if (limit <= 0) {
-            throw new IllegalArgumentException("limit은 양수여야 한다");
+    public List<BucketDepth> bucketDepths(List<MatchBucket> buckets) {
+        if (buckets.isEmpty()) {
+            return List.of();
         }
-        Set<String> ids = redis.opsForZSet().range(queueKey, 0, limit - 1L);
-        if (ids == null || ids.isEmpty()) {
-            return Collections.emptyList();
+        List<?> raw = redis.execute(depthsScript, MatchingRedisKeys.queues(buckets));
+        if (raw == null || raw.isEmpty()) {
+            return List.of();
         }
-        List<UUID> result = new ArrayList<>(ids.size());
-        for (String id : ids) {
-            try {
-                result.add(UUID.fromString(id));
-            } catch (IllegalArgumentException e) {
-                // 손상된 항목 하나가 그 큐의 매칭 전체를 멈추게 두지 않는다.
-                // 운영 도구나 예전 형식이 남긴 값일 수 있으므로 지우고 계속 간다.
-                log.warn("대기열에 requestId가 아닌 항목이 있어 제거한다 queueKey={} value={}", queueKey, id);
-                redis.opsForZSet().remove(queueKey, id);
+        List<BucketDepth> depths = new ArrayList<>(raw.size() / 3);
+        for (int i = 0; i + 2 < raw.size(); i += 3) {
+            int index = Integer.parseInt(String.valueOf(raw.get(i)));
+            // Lua는 score를 실수 문자열로 준다. epoch millis라 소수부는 언제나 0이다.
+            long oldest = (long) Double.parseDouble(String.valueOf(raw.get(i + 1)));
+            int waiting = Integer.parseInt(String.valueOf(raw.get(i + 2)));
+            depths.add(new BucketDepth(buckets.get(index - 1), oldest, waiting));
+        }
+        return depths;
+    }
+
+    /**
+     * 계획대로 bucket마다 오래 기다린 순으로 꺼낸다 (docs/07 §3.2).
+     *
+     * <p>어느 requestId를 어느 bucket에서 읽었는지 함께 돌려준다. DB에서 이미 끝난 요청은
+     * 조건을 다시 읽을 수 없어, 이 정보가 없으면 어느 bucket에서 지울지 알 수 없다 (docs/07 §3.3).
+     */
+    public List<BucketSlice> waitingOldestFirst(BucketScanPlan plan) {
+        if (plan.isEmpty()) {
+            return List.of();
+        }
+        Object[] quotas = plan.quotas().stream().map(String::valueOf).toArray();
+        List<?> raw = redis.execute(
+                sliceScript, MatchingRedisKeys.queues(plan.buckets()), quotas);
+        if (raw == null) {
+            return List.of();
+        }
+        List<BucketSlice> slices = new ArrayList<>(plan.buckets().size());
+        int cursor = 0;
+        for (MatchBucket bucket : plan.buckets()) {
+            int count = Integer.parseInt(String.valueOf(raw.get(cursor++)));
+            List<UUID> ids = new ArrayList<>(count);
+            for (int i = 0; i < count; i++) {
+                String value = String.valueOf(raw.get(cursor++));
+                try {
+                    ids.add(UUID.fromString(value));
+                } catch (IllegalArgumentException e) {
+                    // 손상된 항목 하나가 그 큐의 매칭 전체를 멈추게 두지 않는다.
+                    // 운영 도구나 예전 형식이 남긴 값일 수 있으므로 지우고 계속 간다.
+                    log.warn("대기열에 requestId가 아닌 항목이 있어 제거한다 bucket={} value={}",
+                            bucket.suffix(), value);
+                    redis.opsForZSet().remove(MatchingRedisKeys.queue(bucket), value);
+                }
+            }
+            if (!ids.isEmpty()) {
+                slices.add(new BucketSlice(bucket, ids));
             }
         }
-        return result;
+        return slices;
+    }
+
+    /** 한 bucket에서 읽어 온 대기자들. 어디서 읽었는지를 잃지 않기 위한 묶음이다. */
+    public record BucketSlice(MatchBucket bucket, List<UUID> requestIds) {
     }
 
     /**
@@ -161,9 +220,12 @@ public class MatchQueueRepository {
         return found;
     }
 
-    /** 대기열 길이. 대기 화면과 metric에 쓴다. */
-    public long waitingCount(String queueKey) {
-        Long size = redis.opsForZSet().size(queueKey);
-        return size == null ? 0L : size;
+    /** 모드 전체의 대기 인원. bucket으로 나뉘어 있어 합계를 구한다. 대기 화면과 metric에 쓴다. */
+    public long waitingCount(List<MatchBucket> buckets) {
+        if (buckets.isEmpty()) {
+            return 0L;
+        }
+        Long total = redis.execute(countScript, MatchingRedisKeys.queues(buckets));
+        return total == null ? 0L : total;
     }
 }
